log
Thu, May 15, 2025 11:17:43 AM: 
 sudoku.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
 tests:  0|0
3f0e54c
Thu, May 15, 2025 11:18:23 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
55b702a
Thu, May 15, 2025 11:19:21 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:57:12: error: variable 'y' set but not used [-Werror=unused-but-set-variable]
     int x, y;
            ^
sudoku.c:57:9: error: variable 'x' set but not used [-Werror=unused-but-set-variable]
     int x, y;
         ^
cc1.exe: all warnings being treated as errors
1997341
Thu, May 15, 2025 11:19:38 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
eb0723f
Thu, May 15, 2025 11:20:32 AM: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
992e3a3
Thu, May 15, 2025 11:21:47 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
481a9d1
Thu, May 15, 2025 11:24:16 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
56c1467
Thu, May 15, 2025 11:26:48 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:73:11: error: unused variable 'possibleNode' [-Werror=unused-variable]
     Node* possibleNode = createNode();
           ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
bf7d48e
Thu, May 15, 2025 11:27:10 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:76:13: error: redefinition of 'possibleNode'
       Node* possibleNode = copy(n);
             ^~~~~~~~~~~~
sudoku.c:75:13: note: previous definition of 'possibleNode' was here
       Node* possibleNode = createNode();
             ^~~~~~~~~~~~
a4ed20e
Thu, May 15, 2025 11:27:21 AM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
61f9bec
Thu, May 15, 2025 11:40:15 AM: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
bcc7988
Thu, May 15, 2025 11:56:49 AM: 
 sudoku.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  5|3
total_score: 35/70
8904b7e
Thu, May 15, 2025 11:58:08 AM: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
07ed049
Thu, May 15, 2025 11:58:58 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
dacadd9
Thu, May 15, 2025 11:59:23 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
0ec412f
Thu, May 15, 2025 12:05:15 PM: 
 sudoku.c | 29 +++++++++++++++++++----------
 1 file changed, 19 insertions(+), 10 deletions(-)
 tests:  6|2
total_score: 45/70
3fdaebc
Thu, May 15, 2025 12:52:54 PM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
81717ab
Thu, May 15, 2025 12:55:32 PM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
254d25d
